# v-trimming-gui

./: .gitignore  README.md  keyboard_event  main.py  pyproject.toml  video_operator.py
