[tool.poetry]
name = "v-trimming-gui"
version = "0.1.0"
description = "A GUI application for cropping images from videos."
authors = ["menrui <menrui.d@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<=3.9"
opencv-python = "^4.5.5"
PySimpleGUI = "^4.56.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
